# helix-c

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  helix.h  helix.pc.in  readme.md
include/: channel.h  client.h  defs.h  game.h  stream.h  user.h  util.h  videoplayer.h
src/: channel.c  client.c  game.c  stream.c  user.c  util.c  videoplayer.c
